--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "algo-lib",
+  "name": "algoliba",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
+  "dependencies": {},
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": ["algorithms", "sorting", "bubble sort", "quick sort"],
   "author": "",
   "license": "ISC"
 }
