--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "algoliba",
   "version": "1.1.1",
   "main": "src/index.js",
+  "type": "module",
+  "exports": {
+    "require": "./src/index.cjs",
+    "import": "./src/index.mjs"
+  },
   "dependencies": {},
   "devDependencies": {},
   "scripts": {
